@@ -13,6 +13,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #28925: cPickle now correctly propagates errors when unpickle instances
+  of old-style classes.
+
+
 What's New in Python 2.7.13
 ===========================
 
